Subject and AboutUS

--- a/ProyectoDWS/src/main/resources/static/aboutUS.html
+++ b/ProyectoDWS/src/main/resources/static/aboutUS.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AboutUS</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
+    <p>We are a group of alumni who want to help newer students in the cybersecurity engineering program.
+    We all know that it is a difficult grade, but also we know that, if you study and have a good preparation
+    for your exams, you won't have any problem to pass it.
+    We are:<br>
+    <ul>
+        <li>Erika Illarionov</li>
+        <li>Adrián Inarejos</li>
+        <li>Miguel Iglesias</li>
+    </ul>
+    </p>
 
 </body>
 </html>
