--- a/ProyectoDWS/src/main/resources/static/subjects.html
+++ b/ProyectoDWS/src/main/resources/static/subjects.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Subjects</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<header>
+    <div class="titular">
+        <h1>TAKE LESSONS ABOUT</h1>
+    </div>
+    <br>
+</header>
+<section id="cards">
+    <div class="content">
+        <div class="content-cards">
+            <div class="card">
+                <img src="imagesStatic/maths.png" alt="">
+                <h3>MATES</h3>
+                <a href="subjects.html"><u>CLICK HERE</u></a>
+            </div>
+            <div id="medium" class="card">
+                <img src="imagesStatic/ds.png" alt="">
+                <h3>ED</h3>
+                <a href="subjects.html"><u>CLICK HERE</u></a>
+            </div>
+            <div class="card">
+                <img src="imagesStatic/physics.png" alt="">
+                <h3>FISICA</h3>
+                <a href="subjects.html"><u>CLICK HERE</u></a>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
