create css for templates

--- a/ProyectoDWS/src/main/resources/static/aboutUS.html
+++ b/ProyectoDWS/src/main/resources/static/aboutUS.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>AboutUS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/aboutUs.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>We are a group of alumni who want to help newer students in the cybersecurity engineering program.
+<header>
+    <div class="content">
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="/">INICIO</a></li>
+                    <li><a href="subjects.html">ASIGNATURAS</a></li>
+                    <li><a href="contact.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="titular">
+        <h1>SOBRE NOSOTROS</h1>
+    </div>
+    <br>
+</header>
+<p>
+    We are a group of alumni who want to help newer students in the cybersecurity engineering program.
     We all know that it is a difficult grade, but also we know that, if you study and have a good preparation
     for your exams, you won't have any problem to pass it.
     We are:<br>
+<div class="centered-list">
     <ul>
         <li>Erika Illarionov</li>
         <li>Adrián Inarejos</li>
         <li>Miguel Iglesias</li>
     </ul>
-    </p>
+</div>
+</p>
 
 </body>
 </html>
