--- a/ProyectoDWS/src/main/resources/static/contact.html
+++ b/ProyectoDWS/src/main/resources/static/contact.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contacts</title>
+    <link rel="stylesheet" href="/css/contact.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<header>
+    <div class="content">
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="/">INICIO</a></li>
+                    <li><a href="subjects.html">ASIGNATURAS</a></li>
+                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="titular">
+        <h1>CONTACTA CON NOSOTROS</h1>
+    </div>
+    <br>
+</header>
 </body>
 </html>
