--- a/ProyectoDWS/src/main/resources/static/index.html
+++ b/ProyectoDWS/src/main/resources/static/index.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <title>AcademiaSaber</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/index.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
