--- a/ProyectoDWS/src/main/resources/static/subjects.html
+++ b/ProyectoDWS/src/main/resources/static/subjects.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Subjects</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/subjects.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
+    <div class="content">
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="/">INICIO</a></li>
+                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
     <div class="titular">
         <h1>TAKE LESSONS ABOUT</h1>
     </div>
