images of subjects

--- a/ProyectoDWS/src/main/resources/static/index.html
+++ b/ProyectoDWS/src/main/resources/static/index.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8">
     <title>AcademiaSaber</title>
     <link rel="stylesheet" href="/css/index.css">
-
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -29,17 +28,18 @@
     <div class="content">
         <div class="content-cards">
             <div class="card">
-                <img src="imagesStatic/maths.png" alt="">
+                <img src="/imageStatic/maths.png" alt="Matemáticas">
                 <h3>QUIERO APRENDER<br>MATES</h3>
                 <a href="subjects.html"><u>CLICK AQUÍ</u></a>
             </div>
             <div id="medium" class="card">
-                <img src="imagesStatic/ds.png" alt="">
+                <img src="/imageStatic/ds.png" alt="Ed">
+
                 <h3>QUIERO APRENDER ED</h3>
                 <a href="subjects.html"><u>CLICK AQUÍ</u></a>
             </div>
             <div class="card">
-                <img src="imagesStatic/physics.png" alt="">
+                <img src="/imageStatic/physics.png" alt="Física">
                 <h3>QUIERO APRENDER FISICA</h3>
                 <a href="subjects.html"><u>CLICK AQUÍ</u></a>
             </div>
