--- a/ProyectoDWS/src/main/resources/static/subjects.html
+++ b/ProyectoDWS/src/main/resources/static/subjects.html
@@ -28,17 +28,17 @@
     <div class="content">
         <div class="content-cards">
             <div class="card">
-                <img src="imagesStatic/maths.png" alt="">
+                <img src="/imageStatic/maths.png" alt="Matemáticas">
                 <h3>MATES</h3>
                 <a href="subjects.html"><u>CLICK HERE</u></a>
             </div>
             <div id="medium" class="card">
-                <img src="imagesStatic/ds.png" alt="">
+                <img src="/imageStatic/ds.png" alt="Ed">
                 <h3>ED</h3>
                 <a href="subjects.html"><u>CLICK HERE</u></a>
             </div>
             <div class="card">
-                <img src="imagesStatic/physics.png" alt="">
+                <img src="/imageStatic/physics.png" alt="Física">
                 <h3>FISICA</h3>
                 <a href="subjects.html"><u>CLICK HERE</u></a>
             </div>
