--- a/ProyectoDWS/src/main/resources/static/contact.html
+++ b/ProyectoDWS/src/main/resources/static/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto - Contáctanos</title>
     <link rel="stylesheet" href="/css/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
+
 <header>
     <div class="content">
         <div class="menu">
@@ -20,9 +22,19 @@
         </div>
     </div>
     <div class="titular">
-        <h1>CONTACTA CON NOSOTROS</h1>
+        <h1>Contacto</h1>
+        <p>¿Tienes alguna duda o sugerencia? ¡Escríbenos!</p>
     </div>
-    <br>
 </header>
+
+<main>
+    <section class="contact-info">
+        <h2>Puedes contactarnos en:</h2>
+        <p><strong>Correo:</strong> academia@tusitio.com</p>
+        <p><strong>Teléfono:</strong> +34 622 456 789</p>
+        <p><strong>Dirección:</strong> Calle Sabiduria 45, Madrid, España</p>
+    </section>
+</main>
+
 </body>
 </html>
