--- a/ProyectoDWS/src/main/resources/static/ds.html
+++ b/ProyectoDWS/src/main/resources/static/ds.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estructuras de Datos - Información de la Asignatura</title>
+    <link rel="stylesheet" href="/css/subjects.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<header>
+    <div class="content">
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="/">INICIO</a></li>
+                    <li><a href="subjects.html">ASIGNATURAS</a></li>
+                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="titular">
+        <h1>Estructuras de Datos</h1>
+        <p>Aprende cómo se organizan, almacenan y manipulan los datos de manera eficiente.</p>
+    </div>
+</header>
+
+<main>
+    <section class="intro">
+        <h2>¿Por qué estudiar Estructuras de Datos?</h2>
+        <p>Las estructuras de datos son fundamentales en la informática, permitiendo una gestión eficiente de la información.
+            Son la base de los algoritmos y el diseño de sistemas.</p>
+    </section>
+
+    <section class="topics">
+        <h2>Principales Estructuras de Datos</h2>
+        <ul>
+            <li><strong>Arreglos (Arrays)</strong> - Colección de elementos del mismo tipo con tamaño fijo.</li>
+            <li><strong>Listas enlazadas</strong> - Estructura dinámica con nodos conectados secuencialmente.</li>
+            <li><strong>Pilas (Stacks)</strong> - Estructura LIFO (Último en entrar, primero en salir) usada en operaciones como "deshacer".</li>
+            <li><strong>Colas (Queues)</strong> - Estructura FIFO (Primero en entrar, primero en salir) usada en planificación de procesos.</li>
+            <li><strong>Tablas hash</strong> - Estructura clave-valor que permite búsquedas rápidas.</li>
+            <li><strong>Árboles</strong> - Estructura jerárquica utilizada en bases de datos y sistemas de archivos.</li>
+            <li><strong>Grafos</strong> - Nodos conectados por aristas, usados en redes y búsqueda de caminos.</li>
+        </ul>
+    </section>
+
+    <section class="resources">
+        <h2>Recursos Adicionales</h2>
+        <p>Consulta estos recursos para aprender más sobre estructuras de datos:</p>
+        <ul>
+            <li><a href="https://www.geeksforgeeks.org/data-structures/" target="_blank">GeeksforGeeks - Estructuras de Datos</a></li>
+            <li><a href="https://www.coursera.org/courses?query=data%20structures" target="_blank">Coursera - Cursos de Estructuras de Datos</a></li>
+            <li><a href="https://www.khanacademy.org/computing/computer-science/algorithms" target="_blank">Khan Academy - Algoritmos y Estructuras de Datos</a></li>
+        </ul>
+    </section>
+</main>
+
+
 
 </body>
 </html>
