--- a/ProyectoDWS/src/main/resources/static/subjects.html
+++ b/ProyectoDWS/src/main/resources/static/subjects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Subjects</title>
-    <link rel="stylesheet" href="/css/subjects.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -30,17 +30,17 @@
             <div class="card">
                 <img src="/imageStatic/maths.png" alt="Matemáticas">
                 <h3>MATES</h3>
-                <a href="subjects.html"><u>CLICK HERE</u></a>
+                <a href="maths.html"><u>CLICK HERE</u></a>
             </div>
             <div id="medium" class="card">
                 <img src="/imageStatic/ds.png" alt="Ed">
                 <h3>ED</h3>
-                <a href="subjects.html"><u>CLICK HERE</u></a>
+                <a href="ds.html"><u>CLICK HERE</u></a>
             </div>
             <div class="card">
                 <img src="/imageStatic/physics.png" alt="Física">
                 <h3>FISICA</h3>
-                <a href="subjects.html"><u>CLICK HERE</u></a>
+                <a href="physics.html"><u>CLICK HERE</u></a>
             </div>
         </div>
     </div>
