--- a/ProyectoDWS/src/main/resources/static/maths.html
+++ b/ProyectoDWS/src/main/resources/static/maths.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mathematics - Subject Information</title>
+    <title>Matemáticas - Información de la Asignatura</title>
     <link rel="stylesheet" href="/css/subjects.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
@@ -14,50 +14,49 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="/">HOME</a></li>
-                    <li><a href="aboutUS.html">ABOUT US</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="/">INICIO</a></li>
+                    <li><a href="subjects.html">ASIGNATURAS</a></li>
+                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
     </div>
     <div class="titular">
-        <h1>Mathematics</h1>
-        <p>Explore key concepts, principles, and applications of mathematics.</p>
+        <h1>Matemáticas</h1>
+        <p>Explora conceptos clave, principios y aplicaciones de las matemáticas.</p>
     </div>
 </header>
 
 <main>
     <section class="intro">
-        <h2>Why Study Mathematics?</h2>
-        <p>Mathematics is the foundation of science, technology, and engineering. It enhances problem-solving skills, logical thinking, and analytical reasoning.</p>
+        <h2>¿Por qué estudiar Matemáticas?</h2>
+        <p>Las matemáticas son la base de la ciencia, la tecnología y la ingeniería. Mejoran las habilidades de resolución de problemas,
+            el pensamiento lógico y el razonamiento analítico.</p>
     </section>
 
     <section class="topics">
-        <h2>Key Topics Covered</h2>
+        <h2>Temas Clave</h2>
         <ul>
-            <li>Algebra: Equations, inequalities, and functions</li>
-            <li>Geometry: Shapes, theorems, and spatial reasoning</li>
-            <li>Calculus: Derivatives, integrals, and limits</li>
-            <li>Statistics & Probability: Data analysis, probability distributions</li>
-            <li>Trigonometry: Angles, sine, cosine, and applications</li>
+            <li><strong>Álgebra</strong>: Ecuaciones, desigualdades y funciones.</li>
+            <li><strong>Geometría</strong>: Figuras, teoremas y razonamiento espacial.</li>
+            <li><strong>Cálculo</strong>: Derivadas, integrales y límites.</li>
+            <li><strong>Estadística y Probabilidad</strong>: Análisis de datos y distribuciones.</li>
+            <li><strong>Trigonometría</strong>: Ángulos, seno, coseno y aplicaciones.</li>
         </ul>
     </section>
 
     <section class="resources">
-        <h2>Additional Resources</h2>
-        <p>Here are some useful materials to enhance your learning:</p>
+        <h2>Recursos Adicionales</h2>
+        <p>Aquí tienes algunos materiales útiles para mejorar tu aprendizaje:</p>
         <ul>
-            <li><a href="https://www.khanacademy.org/math" target="_blank">Khan Academy - Mathematics</a></li>
-            <li><a href="https://www.coursera.org/courses?query=mathematics" target="_blank">Coursera - Mathematics Courses</a></li>
-            <li><a href="https://www.mathsisfun.com/" target="_blank">Math is Fun - Interactive Learning</a></li>
+            <li><a href="https://www.khanacademy.org/math" target="_blank">Khan Academy - Matemáticas</a></li>
+            <li><a href="https://www.coursera.org/courses?query=mathematics" target="_blank">Coursera - Cursos de Matemáticas</a></li>
+            <li><a href="https://www.mathsisfun.com/" target="_blank">Math is Fun - Aprendizaje Interactivo</a></li>
         </ul>
     </section>
 </main>
 
-<footer>
-    <p>&copy; 2024 Your Website | All Rights Reserved</p>
-</footer>
 
 </body>
 </html>
