--- a/ProyectoDWS/src/main/resources/static/index.html
+++ b/ProyectoDWS/src/main/resources/static/index.html
@@ -12,11 +12,12 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
-                    <li><a href="subjects.html">ASIGNATURAS</a></li>
+                    <li><a href="courses.html">CURSOS</a></li>
                     <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
                     <li><a href="contact.html">CONTACTO</a></li>
                 </ul>
             </nav>
+            <a href="/enrolled_courses" class="btn"><button>MIS CURSOS</button></a>
         </div>
     </div>
     <div class="titular">
@@ -44,6 +45,9 @@
                 <a href="physics.html"><u>CLICK AQUÍ</u></a>
             </div>
         </div>
+    </div>
+    <div class="contenedor-botones">
+        <button class="botones" onclick="window.location.href='./subject/new'">AÑADIR ASIGNATURA</button>
     </div>
 </section>
 </body>
