--- a/ProyectoDWS/src/main/resources/static/show_subject.html
+++ b/ProyectoDWS/src/main/resources/static/show_subject.html
@@ -17,19 +17,19 @@
 </header>
 <body>
 <div class="image">
-    <img src="/language/{{post.id}}/image">
+    <img src="/subject/{{post.id}}/image">
 </div>
 
-<p>Idioma: <span style="text-transform: uppercase;"><b>{{post.title}}</b></span></p>
+<p>Asignatura: <span style="text-transform: uppercase;"><b>{{post.title}}</b></span></p>
 <p>{{post.text}}</p>
 
 <div class="container">
     <div class="section-button">
         <div class="button">
-            <a href="/language/{{post.id}}/delete">Delete language</a>
+            <a href="/subject/{{post.id}}/delete">Delete subject</a>
         </div>
         <div class="button">
-            <a href="/language/{{post.id}}/courses">Lista de cursos</a><br>
+            <a href="/subject/{{post.id}}/courses">Lista de cursos</a><br>
         </div>
     </div>
 
