--- a/ProyectoDWS/src/main/resources/static/new_course.html
+++ b/ProyectoDWS/src/main/resources/static/new_course.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cursos</title>
+    <link rel="stylesheet" href="/css/style_Courses.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<div class="container">
+    <form accept-charset="UTF-8" action="/courses/saved" method="post">
+        <p>Subject:</p>
+        <input type='text' name='subject' required/>
+        <p>Title:</p>
+        <input type='text' name='title' required/>
+        <p>Description:</p>
+        <textarea name='description' rows=5 cols=40></textarea>
+        <input type='submit' value='Save'/>
+    </form>
+</div>
 </body>
-</html>
+</html>l>
