--- a/ProyectoDWS/src/main/resources/static/new_subject.html
+++ b/ProyectoDWS/src/main/resources/static/new_subject.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <form accept-charset="UTF-8" action="/language/new" method="post" enctype="multipart/form-data">
+    <form accept-charset="UTF-8" action="/subject/new" method="post" enctype="multipart/form-data">
         <p>Title:</p>
         <input type='text' name='title'/>
         <p>Text:</p>
