--- a/ProyectoDWS/src/main/resources/static/show_course.html
+++ b/ProyectoDWS/src/main/resources/static/show_course.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <p><u>Title</u><br>{{course.language}} {{course.title}}</p>
+    <p><u>Title</u><br>{{course.subject}} {{course.title}}</p>
     <br>
     <p><u>Description</u><br>{{course.description}}</p>
     <form action="/course/{{id}}/enroll" method="post">
